<resources>
    <string name="app_name">Notepadv3</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Settings</string>



    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_send">Send Note</string>
    <string name="menu_ordCat">Order by Category</string>
    <string name="menu_ordTit">Order by Title</string>
    <string name="menu_filter">Filter by Category</string>
    <string name="menu_test">Execute All Tests</string>
    <string name="menu_delete_all_notes">Delete All Notes</string>
    <string name="menu_create_cat">Create new Category</string>
    <string name="menu_edit_cat">Edit Category</string>
    <string name="menu_delete_all_cat">Delete all categories</string>
    <string name="menu_delete_cat">Delete category</string>
    <string name="menu_edit_cat">Edit category</string>


    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>

    <string name="category_id">Category Id</string>
    <string name="category_name">Category</string>
    <string name="no_category">No Category</string>
    <string name="category_confirm">Confirm</string>
    <string name="category_new_name">Category new name</string>


    <string name="title_activity_note_edit">EditNote</string>
    <string name="title_activity_category">Create Category Activity</string>
    <string name="title_activity_category_edit">Edit Category Activity</string>


</resources>
