<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cat_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.71" />

    </LinearLayout>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_new_name" />


    <EditText
        android:id="@+id/cat_new_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="500"
        android:inputType="text"
        android:scrollbars="vertical" />

    <Button android:id="@+id/category_confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>