<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID" />
        <EditText android:id="@+id/idRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="***"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />
        <EditText android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:id="@+id/cat_txt"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.71" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

</LinearLayout>